--- a/MyEventURL/Views/Events/_GridComponent.cshtml
+++ b/MyEventURL/Views/Events/_GridComponent.cshtml
@@ -7,13 +7,14 @@
 </grid>
 -->
 <script type="text/x-template" id="grid-template">
-    <table :width="Width">
+    <table class="grid" :width="Width">
         <thead>
             <tr>
                 <th v-for="key in columns"
                     v-on:click="sortBy(key.name)"
                     :class="{ active: sortKey == key.name }"
-                    :class="key.hide == true ? 'hidden-xs' :''">
+                    :class="key.hide == true ? 'hidden-xs' :''"
+                    class="grid">
                     {{ key.name | capitalize }}
                     <span class="arrow" :class="sortOrders[key.name] > 0 ? 'asc' : 'dsc'">
                     </span>
@@ -22,7 +23,7 @@
         </thead>
         <tbody>
             <tr v-for="entry in filteredData">
-                <td v-for="key in columns"  :class="key.hide == true ? 'hidden-xs' :''">
+                <td v-for="key in columns" class="grid"  :class="key.hide == true ? 'hidden-xs' :''">
                     {{key.name != 'Actions' ? entry[key.name] : ""}}
                     <span v-if="key.name == 'Actions'" v-html="returnActions(entry[key.name])"></span>
                 </td>
@@ -89,11 +90,11 @@
         methods: {
             returnActions: function (id) {
                 var returntext = [];
+                if (this.copy != null) returntext.push(this.copy.replace(/{replace}/, id));
                 if (this.edit != null) returntext.push(this.edit.replace(/{replace}/, id));
                 if (this.view != null) returntext.push(this.view.replace(/{replace}/, id));
                 if (this.delete != null) returntext.push(this.delete.replace(/{replace}/, id));
                 if (this.add != null) returntext.push(this.add.replace(/{replace}/, id));
-                if (this.copy != null) returntext.push(this.copy.replace(/{replace}/, id));
                 return (returntext.join(" | "));
             },
             sortBy: function (key) {
@@ -111,13 +112,13 @@
         color: #444;
     }
 
-    table {
+    table.grid {
         border: 2px solid #42b983;
         border-radius: 3px;
         background-color: #fff;
     }
 
-    th {
+    th.grid {
         background-color: #42b983;
         color: rgba(255,255,255,0.66);
         cursor: pointer;
@@ -127,11 +128,11 @@
         user-select: none;
     }
 
-    td {
+    td.grid {
         background-color: #f9f9f9;
     }
 
-    th, td {
+    th.grid, td.grid {
         min-width: 120px;
         padding: 10px 20px;
     }
