--- a/MyEventURL/Views/Events/Index.cshtml
+++ b/MyEventURL/Views/Events/Index.cshtml
@@ -21,7 +21,7 @@
           :filter-key="FutureQuery"
           copy="<a href='javascript:EventForm.runCopyEvent({replace})'>Copy</a>"
           edit="<a href='javascript:EventForm.runEditEvent({replace})'>Edit</a>"
-          view="<a href='http://www.msn.com/{replace}'>View</a>"
+          view="<a href='/Events/Details/{replace}'>View</a>"
           delete="<a href='/Events/Delete/{replace}'>Delete</a>"
           add="<a href='http://www.msn.com/{replace}'>Add</a>"
           width="100%">
